Re-enable ansible-lint risky-file-permissions

--- a/ansible/install_applications/roles/logging_kibana_deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/logging_kibana_deploy/tasks/main.yml
@@ -31,6 +31,7 @@
     state: directory
     owner: "{{ standard_user.name }}"
     group: "{{ standard_user.name }}"
+    mode: 0755
 
 - name: Generate Kibana saved objects exporter
   ansible.builtin.template:
