--- a/ansible/install_infra/roles/kubernetes_controller_bootstrap/tasks/main.yml
+++ b/ansible/install_infra/roles/kubernetes_controller_bootstrap/tasks/main.yml
@@ -9,6 +9,7 @@
   ansible.builtin.file:
     path: "{{ kubeconfig_path | dirname }}"
     state: directory
+    mode: 0755
 
 - name: Configure kube
   ansible.builtin.fetch:
