--- a/ansible/install_infra/roles/chrony/tasks/main.yml
+++ b/ansible/install_infra/roles/chrony/tasks/main.yml
@@ -23,6 +23,7 @@
   ansible.builtin.template:
     src: "server.conf.j2"
     dest: /etc/chrony/conf.d/server.conf
+    mode: 0644
   when: chrony_server_enabled
   notify: Restart Chrony
 
@@ -37,4 +38,5 @@
   ansible.builtin.template:
     src: "custom.sources.j2"
     dest: /etc/chrony/sources.d/custom.sources
+    mode: 0644
   notify: Reload Chrony sources
