--- a/ansible/install_infra/roles/dns_client/tasks/main.yml
+++ b/ansible/install_infra/roles/dns_client/tasks/main.yml
@@ -3,10 +3,12 @@
   ansible.builtin.template:
     src: resolv.conf.j2
     dest: /etc/resolv.conf
+    mode: 0644
     backup: yes
 
 - name: Generate backup DNS configuration
   ansible.builtin.template:
     src: resolv.conf.j2
     dest: /etc/resolv.conf.bak
+    mode: 0644
   when: dns_generate_backup_configuration
