--- a/ansible/install_infra/roles/fail2ban/tasks/main.yml
+++ b/ansible/install_infra/roles/fail2ban/tasks/main.yml
@@ -8,6 +8,7 @@
   ansible.builtin.template:
     src: filter.conf.j2
     dest: "/etc/fail2ban/filter.d/{{ item.name }}.conf"
+    mode: 0644
   with_items: "{{ fail2ban_filters | default([]) }}"
   notify: Restart Fail2Ban
 
@@ -15,6 +16,7 @@
   ansible.builtin.template:
     src: jail.conf.j2
     dest: "/etc/fail2ban/jail.d/{{ item.name }}.conf"
+    mode: 0644
   with_items: "{{ fail2ban_jails | default([]) }}"
   notify: Restart Fail2Ban
 
