--- a/ansible/install_infra/roles/glusterfs_server_install/tasks/prometheus-exporter.yml
+++ b/ansible/install_infra/roles/glusterfs_server_install/tasks/prometheus-exporter.yml
@@ -68,17 +68,20 @@
   ansible.builtin.template:
     src: gluster-exporter.toml.j2
     dest: /etc/gluster-exporter/gluster-exporter.toml
+    mode: 0600
   notify: Restart Gluster Prometheus Exporter
 
 - name: Prepare Gluster Prometheus Exporter service override
   ansible.builtin.file:
     path: /etc/systemd/system/gluster-exporter.service.d
     state: directory
+    mode: 0755
 
 - name: Configure Gluster Prometheus Exporter service
   ansible.builtin.template:
     src: gluster-exporter_override.service.j2
     dest: /etc/systemd/system/gluster-exporter.service.d/override.conf
+    mode: 0644
   notify: Restart Gluster Prometheus Exporter
 
 - name: Auto-start gluster-exporter
