--- a/ansible/install_infra/roles/keepalived/tasks/prometheus-exporter.yml
+++ b/ansible/install_infra/roles/keepalived/tasks/prometheus-exporter.yml
@@ -3,6 +3,7 @@
   ansible.builtin.file:
     path: "{{ keepalived.exporter.path }}"
     state: directory
+    mode: 0755
 
 - name: Download Keepalived Prometheus Exporter
   ansible.builtin.unarchive:
@@ -16,6 +17,7 @@
   ansible.builtin.template:
     src: keepalived-exporter.service.j2
     dest: /etc/systemd/system/keepalived-exporter.service
+    mode: 0644
   notify: Restart Keepalived Exporter
 
 - name: Auto-start keepalived-exporter
