--- a/ansible/install_infra/roles/kubernetes_node_join/tasks/main.yml
+++ b/ansible/install_infra/roles/kubernetes_node_join/tasks/main.yml
@@ -27,6 +27,7 @@
   ansible.builtin.file:
     path: "{{ item }}"
     state: directory
+    mode: 0755
   with_items:
     - /etc/kubernetes/pki
     - /etc/kubernetes/pki/etcd
