--- a/ansible/install_infra/roles/letsencrypt_prepare/tasks/main.yml
+++ b/ansible/install_infra/roles/letsencrypt_prepare/tasks/main.yml
@@ -3,6 +3,7 @@
   ansible.builtin.file:
     path: "{{ item }}"
     state: directory
+    mode: 0755
   loop:
     - "{{ letsencrypt_hooks_dir }}"
     - "{{ letsencrypt_hooks_pre_include_dir }}"
