--- a/ansible/install_infra/roles/usb_serial/tasks/ser2net.yml
+++ b/ansible/install_infra/roles/usb_serial/tasks/ser2net.yml
@@ -20,6 +20,7 @@
   ansible.builtin.template:
     dest: /etc/ser2net.yaml
     src: ser2net.yaml.j2
+    mode: 0644
   notify: Restart ser2net
 
 - name: Auto-start ser2net
