--- a/ansible/install_infra/roles/kubernetes_node_preinstall/defaults/main.yml
+++ b/ansible/install_infra/roles/kubernetes_node_preinstall/defaults/main.yml
@@ -10,3 +10,8 @@ kubernetes_kubelet_extra_parameters:
   - "--authorization-mode=Webhook"
   - "--authentication-token-webhook=true"
   - "--system-reserved=cpu={{ kubernetes_kubelet_system_reserved_cpu }},memory={{ kubernetes_kubelet_system_reserved_memory }}"
+# avoid "Failed to start ContainerManager failed to initialise top level QOS containers" error (ref: https://github.com/kubernetes/kubernetes/issues/43856)
+# avoid "kubelet crashes with: root container [kubepods] doesn't exist" (ref: https://github.com/kubernetes/kubernetes/issues/95488)
+# Also configured in kubeadm_config.yaml
+  - --cgroups-per-qos=false
+  - --enforce-node-allocatable=''
