--- a/ansible/install_applications/vars/infra-kubernetes-dashboard.yml
+++ b/ansible/install_applications/vars/infra-kubernetes-dashboard.yml
@@ -2,6 +2,7 @@
 # To avoid loops inside kubernetes_dashboard
 _kubernetes_dashboard_var_loader:
   base_image:
+    repo: "docker.io"
     name: "kubernetesui/dashboard"
     tag: "v2.3.1"
 
@@ -31,6 +32,7 @@ kubernetes_dashboard:
 # To avoid loops inside kubernetes_dashboard_metrics_scraper
 _kubernetes_dashboard_metrics_scraper_var_loader:
   base_image:
+    repo: "docker.io"
     name: "kubernetesui/metrics-scraper"
     tag: "v1.0.6"
 
