--- a/ansible/install_applications/vars/infra-reloader.yml
+++ b/ansible/install_applications/vars/infra-reloader.yml
@@ -2,6 +2,7 @@
 # To avoid loops inside reloader
 _reloader_var_loader:
   base_image:
+    repo: "docker.io"
     name: "stakater/reloader"
     tag: "v0.0.99"
 
