--- a/ansible/install_applications/vars/monitoring-grafana.yml
+++ b/ansible/install_applications/vars/monitoring-grafana.yml
@@ -2,6 +2,7 @@
 # To avoid loops inside grafana
 _grafana_var_loader:
   base_image:
+    repo: "docker.io"
     name: "grafana/grafana"
     tag: "8.1.3"
 
