--- a/ansible/install_applications/vars/auth-lemonldap.yml
+++ b/ansible/install_applications/vars/auth-lemonldap.yml
@@ -3,6 +3,7 @@
 _lemonldap_var_loader:
   namespace: "auth-lemonldap"
   base_image:
+    repo: "docker.io"
     name: "coudot/lemonldap-ng"
     tag: "2.0.13"
 
