--- a/ansible/install_applications/vars/auth-openldap.yml
+++ b/ansible/install_applications/vars/auth-openldap.yml
@@ -2,6 +2,7 @@
 # To avoid loops inside openldap
 _openldap_var_loader:
   base_image:
+    repo: "docker.io"
     name: "osixia/openldap"
     tag: "1.5.0-amd64"
   namespace: "auth-openldap"
