--- a/ansible/install_applications/vars/home-esphome.yml
+++ b/ansible/install_applications/vars/home-esphome.yml
@@ -2,6 +2,7 @@
 # To avoid loops inside esphome
 _esphome_var_loader:
   base_image:
+    repo: "docker.io"
     name: "esphome/esphome"
     tag: "2021.9.0"
   namespace: "home-esphome"
