--- a/ansible/install_applications/vars/home-mosquitto.yml
+++ b/ansible/install_applications/vars/home-mosquitto.yml
@@ -2,7 +2,8 @@
 # To avoid loops inside mosquitto
 _mosquitto_var_loader:
   base_image:
-    name: "eclipse-mosquitto"
+    repo: "docker.io"
+    name: "library/eclipse-mosquitto"
     tag: "2.0.12-openssl"
   namespace: "home-mosquitto"
 
