--- a/ansible/install_applications/vars/home-nodered.yml
+++ b/ansible/install_applications/vars/home-nodered.yml
@@ -3,6 +3,7 @@
 _nodered_var_loader:
   namespace: "home-nodered"
   base_image:
+    repo: "docker.io"
     name: "nodered/node-red"
     tag: "1.3.5-12-minimal-amd64"
 
