--- a/ansible/install_applications/vars/infra-gandi-livedns.yml
+++ b/ansible/install_applications/vars/infra-gandi-livedns.yml
@@ -3,7 +3,8 @@
 _gandi_livedns_var_loader:
   version: 1.0.0
   base_image:
-    name: alpine
+    repo: "docker.io"
+    name: library/alpine
     tag: "3.14.2"
 
 gandi_livedns:
