--- a/ansible/install_applications/vars/infra-gotify.yml
+++ b/ansible/install_applications/vars/infra-gotify.yml
@@ -2,6 +2,7 @@
 # To avoid loops inside gotify
 _gotify_var_loader:
   base_image:
+    repo: "docker.io"
     name: "gotify/server"
     tag: "2.0.23"
   namespace: "infra-gotify"
