--- a/ansible/install_applications/vars/infra-intel-gpu-plugin.yml
+++ b/ansible/install_applications/vars/infra-intel-gpu-plugin.yml
@@ -2,6 +2,7 @@
 # To avoid loops inside intel_gpu_plugin
 _intel_gpu_plugin_var_loader:
   base_image:
+    repo: "docker.io"
     name: "intel/intel-gpu-plugin"
     tag: "0.21.0"
 
