--- a/ansible/install_applications/vars/logging-fluentbit.yml
+++ b/ansible/install_applications/vars/logging-fluentbit.yml
@@ -2,6 +2,7 @@
 # To avoid loops inside fluentbit
 _fluentbit_var_loader:
   base_image:
+    repo: "docker.io"
     name: "fluent/fluent-bit"
     tag: "1.8.7"
 
