--- a/ansible/install_applications/vars/logging-fluentd.yml
+++ b/ansible/install_applications/vars/logging-fluentd.yml
@@ -2,6 +2,7 @@
 # To avoid loops inside fluentd
 _fluentd_var_loader:
   base_image:
+    repo: "docker.io"
     name: "fluent/fluentd"
     tag: "v1.14.0-debian-1.0"
   namespace: "logging-fluentd"
