--- a/ansible/install_applications/vars/stream-jellyfin.yml
+++ b/ansible/install_applications/vars/stream-jellyfin.yml
@@ -3,10 +3,12 @@
 _jellyfin_var_loader:
   namespace: "stream-jellyfin"
   base_image:
+    repo: "docker.io"
     name: "jellyfin/jellyfin"
     tag: "10.7.7-amd64"
   conf_injection_base_image:
-    name: "python"
+    repo: "docker.io"
+    name: "library/python"
     tag: "3.9.7-alpine3.14"
 
 jellyfin:
