--- a/ansible/install_applications/roles/app_base_deploy/tasks/docker-image-private-registry.yml
+++ b/ansible/install_applications/roles/app_base_deploy/tasks/docker-image-private-registry.yml
@@ -20,47 +20,74 @@
 
 - name: Generate public_image full name
   ansible.builtin.set_fact:
-    public_image: "{% if base_image.repo is defined %}{{ base_image.repo }}/{% endif %}{{ base_image.name }}:{{ base_image.tag }}"
+    public_image: "{{ base_image.repo }}/{{ base_image.name }}:{{ base_image.tag }}"
   when: base_image is defined
 
-# On the ansible controller host, docker-gc is scheduled, so our previously built/pulled images might have been deleted.
+# On the ansible controller host, container image pruning is scheduled, so our previously built/pulled images might have been deleted.
 # To avoid unnecessary builds/pulls from the internet, it first tries to pull the image from the private repo.
 # (ignoring failures to support 1st time builds, and without being flagged as changed)
 - name: Pull from private registry
-  community.docker.docker_image:
+  containers.podman.podman_image:
     name: "{{ private_image }}"
-    source: pull
+    pull: yes
   changed_when: False
   failed_when: False
+  
+- name: Gather info on private image
+  containers.podman.podman_image_info:
+    name: "{{ private_image }}"
+  register: private_image_info
 
 - name: Pull from public registry and push to private registry
-  community.docker.docker_image:
-    name: "{{ public_image }}"
-    repository: "{{ private_image }}"
-    source: pull
-    push: yes
+  block:
+    - name: Pull from public registry
+      containers.podman.podman_image:
+        name: "{{ public_image }}"
+        pull: yes
+  
+    - name: Gather info on public image
+      containers.podman.podman_image_info:
+        name: "{{ public_image }}"
+      register: public_image_info
+
+    - name: Tag to private registry
+      command: "podman tag {{ public_image }} {{ private_image }}"
+      when: not private_image_info.images or private_image_info.images[0].Id != public_image_info.images[0].Id
+    
+    - name: Push to private registry
+      containers.podman.podman_image:
+        name: "{{ private_image }}"
+        push: yes
+      when: not private_image_info.images or private_image_info.images[0].Id != public_image_info.images[0].Id
   when:
     - not build | default('no') | bool
     - public_image is defined
 
-- name: Complet build args
-  ansible.builtin.set_fact:
-    build_args_completed: "{{ build_args | default({}) | combine ({'from_image':  public_image }) }}"
+- name: Build custom image
+  block:
+    - name: Complete build args
+      ansible.builtin.set_fact:
+        build_args_completed: "{{ build_args | default({}) | combine ({'from_image':  public_image }) }}"
+      when:
+        - public_image is defined
+
+    - name: Generate podman build extra_args
+      ansible.builtin.set_fact:
+        build_extra_args: "{{ (build_extra_args | default([])) + [ one_arg ] }}"
+      loop: "{{ build_args_completed | dict2items }}"
+      vars:
+          one_arg: "--build-arg={{ item.key }}={{ item.value }}"
+      
+    - name: Build and push docker image
+      containers.podman.podman_image:
+        name: "{{ private_image }}"
+        path: "{{ build_path | default(role_path + '/app/build') }}"
+        build:
+          extra_args: "{{ (build_extra_args | default([])) | join(' ') }}"
+        push: yes
   when:
     - build | default('no') | bool
-    - public_image is defined
-
-- name: Build and push docker image
-  community.docker.docker_image:
-    name: "{{ private_image }}"
-    source: build
-    force_source: yes
-    build:
-      path: "{{ build_path | default(role_path + '/app/build') }}"
-      pull: yes
-      args: "{{ build_args_completed | default({}) }}"
-    push: yes
-  when: build | default('no') | bool
+    - not private_image_info.images
 
 - name: Reset build args
   ansible.builtin.set_fact:
