--- a/ansible/install_applications/vars/web-ttrss.yml
+++ b/ansible/install_applications/vars/web-ttrss.yml
@@ -134,4 +134,4 @@ ttrss_pgsql:
   user: "{{ ttrss_pgsql_user | default('ttrss') }}"
   database: "{{ ttrss_pgsql_database | default('ttrss') }}"
   password: "{{ ttrss_pgsql_password | default('clear_password') }}"
-  schema_url: "https://git.tt-rss.org/fox/tt-rss/raw/{{ _ttrss_var_loader.full_commit }}/schema/ttrss_schema_pgsql.sql"
+  schema_url: "https://git.tt-rss.org/fox/tt-rss/raw/{{ _ttrss_var_loader.full_commit }}/sql/pgsql/schema.sql"
