--- a/ansible/install_applications/roles/app_base_deploy/tasks/container-image-private-registry.yml
+++ b/ansible/install_applications/roles/app_base_deploy/tasks/container-image-private-registry.yml
@@ -1,13 +1,13 @@
 ---
 # This set of tasks is meant to be imported in each [app].deploy role
-# It ensures the target docker image is pushed in the private repository.
+# It ensures the target container image is pushed in the private repository.
 
 # For custom images, it builds the image, and pushes it to the private repo
 # For standard images, it pulls the image, and pushes it to the private repo
 
 # Usage :
 #- name: Ensure app_name image is up-to-date in the private registry
-#  ansible.builtin.import_tasks: ../../app_base_deploy/tasks/docker-image-private-registry.yml
+#  ansible.builtin.import_tasks: ../../app_base_deploy/tasks/container-image-private-registry.yml
 #  vars:
 #    base_image:
 #      repo: repo
@@ -78,7 +78,7 @@
       vars:
           one_arg: "--build-arg={{ item.key }}={{ item.value }}"
       
-    - name: Build and push docker image
+    - name: Build and push container image
       containers.podman.podman_image:
         name: "{{ private_image }}"
         path: "{{ build_path | default(role_path + '/app/build') }}"
